--- a/public/style/addForm.css
+++ b/public/style/addForm.css
@@ -4,16 +4,31 @@
 }
 #taskForm{
     width: 300px;
-    height: 300px;
+    height: 350px;
     position: absolute;
     margin: auto;
     left: 0;
     right: 0;
     top: -100px;
     bottom: 0;
+    text-align: center;
     overflow: hidden;
     border: 1px solid #ccc;
 }
-ol{
+#taskForm span{
+    font-size: 16px;
+}
+#taskForm input, textarea{
+    width: 169px;
+    position: relative;
+    right: -10px;
+}
 
+#taskForm input{
+    height: 20px;
+    margin: 5px 0;
+    /*line-height: 30px;*/
+}
+#taskForm textarea{
+    height: 30px;
 }
